--- a/src/main/java/code/lms/main_menu.form
+++ b/src/main/java/code/lms/main_menu.form
@@ -354,6 +354,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="HAND OVER"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_hand_overActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="20" y="120" width="160" height="40"/>
