added auto email send

--- a/src/main/java/code/lms/user_acces.form
+++ b/src/main/java/code/lms/user_acces.form
@@ -1265,9 +1265,9 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="-2" pref="271" max="-2" attributes="0"/>
-                  <Component id="returnbook" min="-2" pref="108" max="-2" attributes="0"/>
-                  <EmptySpace pref="218" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="r_label" pref="579" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="name_label" min="-2" pref="95" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="id_label" min="-2" pref="30" max="-2" attributes="0"/>
@@ -1283,7 +1283,7 @@
                   <Component id="jLabel15" alignment="3" pref="40" max="32767" attributes="0"/>
                   <Component id="id_label" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="name_label" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="returnbook" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="r_label" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -1327,18 +1327,18 @@
             <Property name="verticalAlignment" type="int" value="1"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="returnbook">
+        <Component class="javax.swing.JLabel" name="r_label">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Dialog" size="14" style="1"/>
+              <Font name="Dialog" size="18" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="0" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="jLabel5"/>
+            <Property name="text" type="java.lang.String" value="Have a nice day"/>
           </Properties>
         </Component>
       </SubComponents>
